--- a/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -14,20 +14,20 @@ spring:
     openfeign:
       client:
         config:
-#          default:
+#          default: #默认配置 所有服务没单独的就用默认的
 #            #连接超时时间
 #            connectTimeout: 3000
 #            #读取超时时间
 #            readTimeout: 3000
-          cloud-payment-service: #单个可以覆盖默认配置
+          cloud-payment-service: #单个可以覆盖默认配置 这里是个服务名
             #连接超时时间
             connectTimeout: 20000
             #读取超时时间
             readTimeout: 20000
-      httpclient:
+      httpclient: # 配置httpclient
         hc5:
           enabled: true
-      compression:
+      compression: # 配置压缩
         request:
           enabled: true
           min-request-size: 2048 #最小触发压缩的大小
