--- a/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloud-gateway9527/src/main/resources/application.yml
+++ b/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloud-gateway9527/src/main/resources/application.yml
@@ -8,15 +8,15 @@ spring:
     consul: #配置consul地址
       host: localhost
       port: 8500
-      discovery:
+      discovery: # 注册到consul注册中心中
         prefer-ip-address: true
         service-name: ${spring.application.name}
-    gateway:
-      routes:
+    gateway: # 网关配置
+      routes: # 找得到对应的路劲访问，不然不能访问 
         - id: pay_routh1 #pay_routh1                #路由的ID(类似mysql主键ID)，没有固定规则但要求唯一，建议配合服务名
 #          uri: http://localhost:8001                #匹配后提供服务的路由地址
           uri: lb://cloud-payment-service                #匹配后提供服务的路由地址
-          predicates:
+          predicates: #访问网关的，可以转到对应的服务（相当于隐藏了真实的服务地址） 转到对应微服务的/pay/gateway/get/**路劲上
             - Path=/pay/gateway/get/**              # 断言，路径相匹配的进行路由
             - After=2023-12-30T23:02:39.079979400+08:00[Asia/Shanghai] # 断言，时间在指定时间之后
             #- Cookie=username,zzyy # 断言，cookie中要有username参数
