--- a/springcloud微服务/springcloud尚硅谷/cloud2024-master/pom.xml
+++ b/springcloud微服务/springcloud尚硅谷/cloud2024-master/pom.xml
@@ -53,6 +53,7 @@
         <spring.cloud.version>2022.0.4</spring.cloud.version>
 
         <spring.cloud.alibaba.version>2022.0.0.0-RC2</spring.cloud.alibaba.version>
+        <!--链路追踪-->
         <micrometer-tracing.version>1.2.0</micrometer-tracing.version>
         <micrometer-observation.version>1.12.0</micrometer-observation.version>
         <feign-micrometer.version>12.5</feign-micrometer.version>
