微服务学习完结

--- a/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloudalibaba-sentinel-gateway9528/pom.xml
+++ b/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloudalibaba-sentinel-gateway9528/pom.xml
@@ -19,10 +19,12 @@
 
 
     <dependencies>
+        <!--spring cloud gateway-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <!-- 以下是配合Sentinel必须组件 -->
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-transport-simple-http</artifactId>
