--- a/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloudalibaba-sentinel-gateway9528/src/main/resources/application.yml
+++ b/springcloud微服务/springcloud尚硅谷/cloud2024-master/cloudalibaba-sentinel-gateway9528/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: localhost:8848         # nacos地址 服务注册进nacos
     gateway:
       routes:
         - id: pay_routh1 #pay_routh1                #路由的ID(类似mysql主键ID)，没有固定规则但要求唯一，建议配合服务名
