--- a/shortlink/gateway/src/main/resources/application-dev.yaml
+++ b/shortlink/gateway/src/main/resources/application-dev.yaml
@@ -13,7 +13,7 @@ spring:
                   - /api/short-link/admin/v1/user/login
                   - /api/short-link/admin/v1/user/has-username
 
-        - id: short-link-project
+        - id: short-link-project  # token验证不用加白名单
           uri: lb://short-link-project/api/short-link/**
           predicates:
             - Path=/api/short-link/**
