--- a/shortlink/gateway/src/main/resources/application.yaml
+++ b/shortlink/gateway/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
   application:
     name: short-link-gateway
   profiles:
-    active: aggregation
+    active: aggregation  # 走哪个配置文件
     # active: dev
   data:
     redis:
