--- a/python_study/问gpt/服务器/ai_config.json
+++ b/python_study/问gpt/服务器/ai_config.json
@@ -4,7 +4,7 @@
         {
             "url": "https://api.chatanywhere.tech/v1/chat/completions",
             "key": "sk-ATXhpDsohKCPBxdGfLsHXFUf0Q8zDhNxUNjwQOvLWwOLoJMP",
-            "model": "gpt-3.5-turbo-ca"
+            "model": "gpt-3.5-turbo"
         }
     ]
 }
