--- a/shortlink/pom.xml
+++ b/shortlink/pom.xml
@@ -6,12 +6,11 @@
     <groupId>com.nageoffer.shortlink</groupId>
     <artifactId>shortlink-all</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
+    <packaging>pom</packaging>  
+    <!-- 表示这是个父模块，不参与打包，只负责没有烟规约 -->
     <description>
         🔥热门推荐🔥SaaS 短链接系统，承载高并发和海量存储等场景难题。专为实习、校招以及社招而出的最新项目，项目质量不亚于12306铁路购票项目。
     </description>
-
     <developers>
         <developer>
             <name>马丁</name>
