--- a/python_study/问gpt/服务器/ai_config.json
+++ b/python_study/问gpt/服务器/ai_config.json
@@ -1,10 +1,20 @@
-
 {
     "ai_list": [
         {
-            "url": "https://api.chatanywhere.tech/v1/chat/completions",
-            "key": "sk-ATXhpDsohKCPBxdGfLsHXFUf0Q8zDhNxUNjwQOvLWwOLoJMP",
-            "model": "gpt-3.5-turbo"
+            "url": "https://ark.cn-beijing.volces.com/api/v3/chat/completions",
+            "key": "4069be08-3dd2-4ce9-b863-3602ad637978",
+            "model": "deepseek-r1-250120"
+        },
+        {
+            "url": "https://ark.cn-beijing.volces.com/api/v3/chat/completions",
+            "key": "4069be08-3dd2-4ce9-b863-3602ad637978",
+            "model": "deepseek-v3-241226"
+        },
+        {
+            "url": "https://ark.cn-beijing.volces.com/api/v3/chat/completions",
+            "key": "49a145c4-6b01-4cb1-a442-8fc94ac0c446",
+            "model": "deepseek-r1-250120"
         }
+        
     ]
 }
